<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.vuforiamod.international.fragments.InternationalMoreFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppThemeNoActionBar.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
                app:title="@string/title_more"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppThemeNoActionBar.PopupOverlay"
                app:layout_scrollFlags="scroll|enterAlways">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:id="@+id/ll_international_image_header"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/logo_u_esanpos"
                        android:adjustViewBounds="false"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/mas_de_1000_participantes_esta_edicion"
                        android:textStyle="normal"
                        android:textSize="12sp"
                        android:paddingRight="8dp"
                        android:textColor="@color/md_black_1000"/>
                </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/gray_dark_light"
                android:textColor="@color/md_black_1000"
                android:textAlignment="center"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/descripcion_iw"/>
    </LinearLayout>


    <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_international_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_international_image_header"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"/>

    <!--<android.support.v7.widget.RecyclerView
            android:id="@+id/vp_international_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_international_image_header"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"/>-->


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayout8">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bababa"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <LinearLayout
                android:id="@+id/item_pisco"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#CCC"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="8dp">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_toLeftOf="@+id/imageView8"
                            android:layout_toStartOf="@+id/imageView8">

                        <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_fiesta_pisco"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:textStyle="bold"
                                android:textSize="13sp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/fiesta_del_pisco_programa"
                                android:textColor="#1d1d1d"
                                android:gravity="center_vertical"/>

                    </LinearLayout>

                    <ImageView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/indicator"
                            android:id="@+id/imageView8"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"/>
                </RelativeLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#bababa"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/item_instructive"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#CCC"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="8dp">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_toLeftOf="@+id/imageView7"
                            android:layout_toStartOf="@+id/imageView7">

                        <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/vestido"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:textStyle="bold"
                                android:textSize="13sp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/instructivo_text"
                                android:textColor="#1d1d1d"
                                android:gravity="center_vertical"/>

                    </LinearLayout>

                    <ImageView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/indicator"
                            android:id="@+id/imageView7"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#bababa"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

            </LinearLayout>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/esan_red"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <TextView
                android:id="@+id/tv_international_exit"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:textSize="17sp"
                android:clickable="true"
                android:textColor="@color/esan_red"
                android:text="@string/title_exit"
                android:background="#FFF"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
